Fixes mobile layout issues

--- a/src/style/components/_navbar.scss
+++ b/src/style/components/_navbar.scss
@@ -28,8 +28,7 @@
 			text-transform: uppercase;
 			transition: background-color 0.2s ease-in;
 		}
-		&.active>a,
-		a.router-link-active {
+		&.active>a {
 			background: $brand-primary;
 			color: #fff;
 		}
